; ModuleID = '/home/carl/AnghaBench/streem/src/extr_exec.c_arr_exec.c'
source_filename = "/home/carl/AnghaBench/streem/src/extr_exec.c_arr_exec.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.array_data* }
%struct.array_data = type { i64, i32 }

@STRM_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_6__*, i32)* @arr_exec to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @arr_exec(%struct.TYPE_6__* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_6__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.array_data*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %8 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %7, i32 0, i32 0
  %9 = load %struct.array_data*, %struct.array_data** %8, align 8
  store %struct.array_data* %9, %struct.array_data** %6, align 8
  %10 = load %struct.array_data*, %struct.array_data** %6, align 8
  %11 = getelementptr inbounds %struct.array_data, %struct.array_data* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load %struct.array_data*, %struct.array_data** %6, align 8
  %14 = getelementptr inbounds %struct.array_data, %struct.array_data* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 8
  %16 = call i64 @strm_ary_len(i32 %15)
  %17 = icmp eq i64 %12, %16
  br i1 %17, label %18, label %22

18:                                               ; preds = %2
  %19 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %20 = call i32 @strm_stream_close(%struct.TYPE_6__* %19)
  %21 = load i32, i32* @STRM_OK, align 4
  store i32 %21, i32* %3, align 4
  br label %36

22:                                               ; preds = %2
  %23 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %24 = load %struct.array_data*, %struct.array_data** %6, align 8
  %25 = getelementptr inbounds %struct.array_data, %struct.array_data* %24, i32 0, i32 1
  %26 = load i32, i32* %25, align 8
  %27 = call i32* @strm_ary_ptr(i32 %26)
  %28 = load %struct.array_data*, %struct.array_data** %6, align 8
  %29 = getelementptr inbounds %struct.array_data, %struct.array_data* %28, i32 0, i32 0
  %30 = load i64, i64* %29, align 8
  %31 = add nsw i64 %30, 1
  store i64 %31, i64* %29, align 8
  %32 = getelementptr inbounds i32, i32* %27, i64 %30
  %33 = load i32, i32* %32, align 4
  %34 = call i32 @strm_emit(%struct.TYPE_6__* %23, i32 %33, i32 (%struct.TYPE_6__*, i32)* @arr_exec)
  %35 = load i32, i32* @STRM_OK, align 4
  store i32 %35, i32* %3, align 4
  br label %36

36:                                               ; preds = %22, %18
  %37 = load i32, i32* %3, align 4
  ret i32 %37
}

declare dso_local i64 @strm_ary_len(i32) #1

declare dso_local i32 @strm_stream_close(%struct.TYPE_6__*) #1

declare dso_local i32 @strm_emit(%struct.TYPE_6__*, i32, i32 (%struct.TYPE_6__*, i32)*) #1

declare dso_local i32* @strm_ary_ptr(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
